worked on maincontent of todo field.

--- a/style.css
+++ b/style.css
@@ -1,105 +1,137 @@
-body{
-    padding: 0;
-    margin: 0;
-    width: 100vw;
-    height: 100vh; 
-    background-color: #faf9f8;
-    overflow-x: hidden; 
+body {
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #faf9f8;
+  overflow-x: hidden;
+  font-family: "Mukta", sans-serif;
 }
-#wholeSection{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+#wholeSection {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 /***** Header Starts here **********/
-#header{
-    background-color: rgb(37,100,207);
-    height: 48px;
+#header {
+  background-color: rgb(37, 100, 207);
+  height: 48px;
 }
 
-.title{
-    font-size: 17px;
-    font-weight: 500;
-    font-family: 'Mukta', sans-serif;
+.title {
+  font-size: 17px;
+  font-weight: 500;
 }
 
 /***** Header Ends here **********/
 
-
 /**** Todo Wrapper starts here *********/
 #todoWrapper {
-    display: flex;
-    border: 1px solid red;
-    flex: 1;
+  display: flex;
+  flex: 1;
 }
 
 /****** Sidebar starts here ******/
-#sideNavBarWrapper{
-    width: 290px;
-    background-color: white;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid red;
-}
-
-.navBarLauncher{
-    margin-left: 20px;
-    width:fit-content;
-    background-color: rgb(255, 255, 255);
-    border: none;
-    margin-top: 34px;
-}
-
-#asidenavBarListing{
-    list-style: none;
-    padding:0 ;
-    flex: 1;
-}
-
-#asidenavBarListing li{
-     padding-left: 26px;
-     display: flex;
-     align-items: center;
-     height: 40px;
-     width: auto;
-     
-}
-#asidenavBarListing li:nth-child(1n):hover{
-height: 40px;
-background-color: #eff6fc;
-}
-.item1{
-   margin-left: 17px;
-}
-.item2{
-    margin-left: 17px; 
-}
-#tasksToolbar-TitleContainer{
-    border: 1px solid red;
-}
-#mainContentSection{
-    height: auto;
-     /* position: relative;  */
-    /* justify-content: center; */
-    /* align-items: center;  */
-    
-}
-#tasksToolbar{
-  /* position: absolute; / */
-  /* top:0; */
-  border: 1px solid red;
+#sideNavBarWrapper {
+  width: 290px;
+  background-color: white;
+  height: 100%;
   display: flex;
-  /* justify-content: center;
-  align-items: center; */
+  flex-direction: column;
 }
 
-.root {
-    
-display: flex;
-    flex-direction: column;}
+.navBarLauncher {
+  margin-left: 20px;
+  width: fit-content;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  margin-top: 34px;
+}
 
-.rotodoWrapper {
-    display: flex;
+#asidenavBarListing {
+  list-style: none;
+  padding: 0;
+  flex: 1;
+}
+
+#asidenavBarListing li {
+  padding-left: 26px;
+  display: flex;
+  align-items: center;
+  height: 40px;
+  width: auto;
+}
+#asidenavBarListing li:nth-child(1n):hover {
+  height: 40px;
+  background-color: #eff6fc;
+}
+.item1 {
+  margin-left: 17px;
+}
+.item2 {
+  margin-left: 17px;
+}
+#mainContent {
+  padding: 16px 24px;
+}
+#tasksToolbar {
+  display: flex;
+  flex-direction: column;
+}
+#tasksToolbar-TitleContainer {
+  padding: 6px 8px 3px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.sun {
+  transform: scale(1.3);
+}
+.titlebar {
+  font-size: 20px;
+  font-weight: 600px;
+  color: #292827;
+}
+#currentTime {
+  display: flex;
+  font-size: 12px;
+  color: #878b88;
+  gap: 2px;
+  padding-left: 8px;
+}
+.flex-wrapper {
+  display: flex;
+  background-color: white;
+  height: 45px;
+  margin-top: 28px;
+}
+.bulletButton {
+  background-color: white;
+  border: none;
+  color: #706fd4;
+}
+.textField {
+  border: none;
+  width: 1161px;
+  color: #706fd4;
+  outline: none;
+}
+.textField:hover {
+  outline: none;
+}
+#toDoListing {
+  border: 1px solid red;
+  list-style: none;
+  padding: 0;
+}
+.toDoItems {
+  border: 1px solid red;
+  background-color: white;
+  height: auto;
+  display: flex;
+  min-height: 52px;
+}
+.toDoItems:hover {
+  background-color: #eff6fc;
 }
